--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,33 +1,33 @@
-name: Go
+# name: Go
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-  schedule:
-    - cron: '0 10 * * 1'
+# on:
+#   push:
+#     branches: [ master ]
+#   pull_request:
+#     branches: [ master ]
+#   schedule:
+#     - cron: '0 10 * * 1'
 
-jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.16
-    - name: Build
-      run: go build
+# jobs:
+#   build-and-test:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up Go
+#       uses: actions/setup-go@v2
+#       with:
+#         go-version: 1.16
+#     - name: Build
+#       run: go build
 
-    - name: Test
-      env:
-        MSGraphTenantID: ${{ secrets.MSGraphTenantID }}
-        MSGraphApplicationID: ${{ secrets.MSGraphApplicationID }}
-        MSGraphClientSecret: ${{ secrets.MSGraphClientSecret }}
-        MSGraphExistingGroupDisplayName: ${{ secrets.MSGraphExistingGroupDisplayName }}
-        MSGraphExistingUserPrincipalInGroup: ${{ secrets.MSGraphExistingUserPrincipalInGroup }}
-        MSGraphExistingCalendarsOfUser: ${{ secrets.MSGraphExistingCalendarsOfUser }}
-      run: go test -coverprofile=coverage.txt -covermode=atomic
-    - name: Upload coverage to Codecov
-      run: bash <(curl -s https://codecov.io/bash)
+#     - name: Test
+#       env:
+#         MSGraphTenantID: ${{ secrets.MSGraphTenantID }}
+#         MSGraphApplicationID: ${{ secrets.MSGraphApplicationID }}
+#         MSGraphClientSecret: ${{ secrets.MSGraphClientSecret }}
+#         MSGraphExistingGroupDisplayName: ${{ secrets.MSGraphExistingGroupDisplayName }}
+#         MSGraphExistingUserPrincipalInGroup: ${{ secrets.MSGraphExistingUserPrincipalInGroup }}
+#         MSGraphExistingCalendarsOfUser: ${{ secrets.MSGraphExistingCalendarsOfUser }}
+#       run: go test -coverprofile=coverage.txt -covermode=atomic
+#     - name: Upload coverage to Codecov
+#       run: bash <(curl -s https://codecov.io/bash)
